// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button with specified icon 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 4px;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #fc5475;
  color: #ffffff;
  font-weight: bold;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .c1 svg,
.c0[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c1 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #fc6d89;
}

.c0:active {
  background-color: #fc3b61;
}

<button
  class="c0"
>
  <i
    class="c1 c2"
    cursor="default"
    size="24"
    style="pointer-events: none;"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
    </svg>
  </i>
  Delete
</button>
`;

exports[`Button should render button with specified size 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 1.75rem;
  padding: 0 0.5rem;
  font-size: 0.875rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #373737;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0::before {
  border-color: #373737;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #bfbfbf;
}

.c0:hover {
  border-color: #6B88c5;
}

.c0:active {
  border-color: #3c5ad0;
  color: #3c5ad0;
}

.c0:active .sc-10g5g0q-0 svg {
  fill: #3c5ad0;
}

<button
  class="c0"
>
  Text Button
</button>
`;

exports[`Button should render correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #373737;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0::before {
  border-color: #373737;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #bfbfbf;
}

.c0:hover {
  border-color: #6B88c5;
}

.c0:active {
  border-color: #3c5ad0;
  color: #3c5ad0;
}

.c0:active .sc-10g5g0q-0 svg {
  fill: #3c5ad0;
}

<button
  class="c0"
>
  Button
</button>
`;

exports[`Button should render different button type 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #516bd5;
}

.c0:active {
  background-color: #2f4dc3;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Button should render disabled button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #516bd5;
}

.c0:active {
  background-color: #2f4dc3;
}

<button
  class="c0"
  disabled=""
>
  Primary
</button>
`;

exports[`Button should render loading button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #516bd5;
}

.c0:active {
  background-color: #2f4dc3;
}

.c0::before {
  width: 1em;
  height: 1em;
  margin-right: 8px;
  border: 1px solid;
  border-radius: 50%;
  border-top-color: transparent;
  border-right-color: transparent;
  -webkit-animation: zdZhV 0.7s linear infinite;
  animation: zdZhV 0.7s linear infinite;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Button should render rounded button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 999px;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #516bd5;
}

.c0:active {
  background-color: #2f4dc3;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Button should render rounded icon button 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 999px;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .c1 svg,
.c0[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c1 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #516bd5;
}

.c0:active {
  background-color: #2f4dc3;
}

.c3:disabled .c1 svg,
.c3[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c3 .c1 svg {
  fill: #3c5ad0;
}

.c3:hover .c1 svg {
  fill: #516bd5;
}

.c3:active .c1 svg {
  fill: #2f4dc3;
}

.c4:disabled .c1 svg,
.c4[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c4 .c1 svg {
  fill: #ffffff;
}

.c5:disabled .c1 svg,
.c5[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c5 .c1 svg {
  fill: #fc5475;
}

.c5:hover .c1 svg {
  fill: #fc6d89;
}

.c5:active .c1 svg {
  fill: #fc3b61;
}

.c6:disabled .c1 svg,
.c6[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c6 .c1 svg {
  fill: #ffffff;
}

.c7:disabled .c1 svg,
.c7[disabled] .c1 svg {
  fill: #8b8b8b;
}

.c7 .c1 svg {
  fill: #6B88c5;
}

<button
  class="c0"
>
  <i
    class="c1 c2"
    cursor="default"
    size="24"
    style="pointer-events: none;"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
  </i>
</button>
`;

exports[`Button should render width 100% button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #373737;
  width: 100%;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c0:disabled .sc-10g5g0q-0 svg,
.c0[disabled] .sc-10g5g0q-0 svg {
  fill: #8b8b8b;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0::before {
  border-color: #373737;
}

.c0 .sc-10g5g0q-0 svg {
  fill: #bfbfbf;
}

.c0:hover {
  border-color: #6B88c5;
}

.c0:active {
  border-color: #3c5ad0;
  color: #3c5ad0;
}

.c0:active .sc-10g5g0q-0 svg {
  fill: #3c5ad0;
}

<button
  class="c0"
  width="100%"
>
  Text Button
</button>
`;
